--- a/views/partials/manual-attendance.ejs
+++ b/views/partials/manual-attendance.ejs
@@ -8,7 +8,7 @@
     </div>
     <div class="modal-content">
       <div class="container">
-        <form action="/manual-attendance" method="post">
+        <form action="" method="post">
           <label for="name">
             <div class="">
               <span class="isExist-attdance"></span>
@@ -21,7 +21,7 @@
               </select>
             </div>
           </label>
-          <p class="error select-error"></p>
+          <p class="error employee-error"></p>
           <label for="projectDetails">
             Select Start Date
             <div class="">
@@ -31,7 +31,7 @@
                 class="manual-date"
                 oninput="manualDate(event);"
               />
-              <p class="error start-error"></p>
+              <p class="error date-error"></p>
             </div>
           </label>
           <label for="start">
@@ -43,7 +43,7 @@
                 placeholder="00:00"
                 name="startTime"
               />
-              <p class="error end-error"></p>
+              <p class="error startTime-error"></p>
             </div>
           </label>
           <label for="end">
@@ -55,7 +55,7 @@
                 placeholder="00:00"
                 name="endTime"
               />
-              <p class="error end-error"></p>
+              <p class="error endTime-error"></p>
             </div>
           </label>
           <label for="end">
@@ -85,7 +85,7 @@
             </div>
           </label>
           <div class="">
-            <button class="submit-btn">Submit</button>
+            <button id="submit-btn" class="submit-btn">Submit</button>
           </div>
         </form>
       </div>
@@ -97,7 +97,17 @@
   const baseUrl = "<%= baseUrl %>";
   console.log(baseUrl);
 
+  function showToast(message,type) {
+    const successToast = Toastify({
+      text: message,
+      className: `${type}`,
+    })
+    console.log(successToast)
+   return successToast.showToast()
+  }
+
   const userId = document.querySelector("#userId");
+  const submit = document.querySelector("#submit-btn");
   const isExist = document.querySelector(".isExist-attdance");
 
   const manualDate = (event) => {
@@ -112,9 +122,81 @@
         if (data.length > 0) {
           isExist.textContent = "Attendance Already Exist";
           isExist.style.color = "red";
+          const errorPlaceholder = document.querySelector(`date-error`);
+          errorPlaceholder.style.display = "none";
         } else {
           isExist.textContent = "";
         }
       });
   };
+
+  submit.addEventListener("click", (e) => {
+    e.preventDefault();
+    let bodyData = {};
+    const error = [];
+    const modal = document.querySelector('#myModal')
+    const submitBtn = document.getElementById('#submit-btn')
+    console.log(submitBtn)
+    const form = document.querySelector("form");
+    const errorPlaceholders = document.querySelectorAll("p.error");
+    for (let i = 0; i < errorPlaceholders.length; i++) {
+      errorPlaceholders[i].style.display = "none";
+    }
+    const inputErrors = document.querySelectorAll("input.error");
+    if (inputErrors.length > 0) {
+      for (let j = 0; j < inputErrors.length; j++) {
+        inputErrors[j].classList.remove("error");
+      }
+    }
+    const select = document.querySelector("select");
+    if (select) {
+      if (document.querySelector("select").options.selectedIndex === 0) {
+        const fieldName = "employee";
+        const errorPlaceholder = document.querySelector(`.${fieldName}-error`);
+        errorPlaceholder.textContent = `${fieldName} is required!`;
+        errorPlaceholder.style.display = "block";
+        error.push(fieldName);
+      }
+    }
+    const formData = new FormData(form);
+    // eslint-disable-next-line no-restricted-syntax
+    for (const [name, value] of formData.entries()) {
+      if (name == "date" && value == "") {
+        error.push(name);
+      }
+      bodyData[name] = value;
+    }
+    for (const fieldName of error) {
+      const errorPlaceholder = document.querySelector(`.${fieldName}-error`);
+      console.log(errorPlaceholder);
+      errorPlaceholder.textContent = `${fieldName} is required!`;
+      errorPlaceholder.style.display = "block";
+    }
+    if (error.length === 0) {
+      console.log(bodyData);
+      fetch("/manual-attendance", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify(bodyData),
+      })
+        .then((response) => response.json())
+        .then((data) => {
+          console.log("Success:", data);
+          if(data.type=='warning'){
+            showToast(data.msg,'warning')
+          }else{
+            showToast(data.msg,'info')
+            modal.style.display = 'none';
+            setTimeout(()=>{
+              window.location.assign(`${baseUrl}/dashboard`)
+            },1000)
+          }
+        })
+        .catch((error) => {
+          console.error("Error:", error);
+        });
+    }
+  });
 </script>
