create new js file from script  tag

--- a/views/pages/new-password.ejs
+++ b/views/pages/new-password.ejs
@@ -30,12 +30,6 @@
           </div>
           </form>
       </div>
-      <script>
-        const password = document.getElementById("pass").value
-        const errorMsg = document.getElementById("error-msg")
-        if(password.length>1){
-          errorMsg.innerHtml = "Password is required"
-        }
-      </script>
+      <script src="<%=baseUrl%>/js/newPassword.js"></script>
   </body>
   </html>
