--- a/views/partials/flash-message.ejs
+++ b/views/partials/flash-message.ejs
@@ -79,13 +79,4 @@
   <a class="close" onClick="removeThis(this)">&times;</a>
 </div>
 <% } %>
-
-<script>
-  setTimeout(function (event) {
-    const tar = document.querySelector(".close");
-    removeThis(tar);
-  }, 3000);
-  function removeThis(ele) {
-    ele.parentNode.remove();
-  }
-</script>
+<script src="<%=baseUrl%>/js/flashMessage.js"></script>
