--- a/views/partials/off-day-select-modal.ejs
+++ b/views/partials/off-day-select-modal.ejs
@@ -48,43 +48,4 @@
     </div>
   </div>
 </div>
-<script>
-  const selectBtn = document.getElementsByClassName('select-btn')
-  const offDayInput = document.querySelector('#offDayAddBtn')
-  const offDayAddBtn= document.querySelector('#offDayAddBtn').value
-  let currentValue;
-  console.log(offDayAddBtn.length)
-  if(offDayAddBtn.length>5){
-     currentValue =offDayAddBtn.split(',')
-  }else{
-   currentValue =[offDayAddBtn]
-  }
-  console.log(offDayAddBtn)
-  let values = []
-  values.push(...currentValue)
-  for(var i =0;i<selectBtn.length;i++){
-    currentValue.map(v=>{
-     if(v==selectBtn[i].querySelector('input').value){
-      selectBtn[i].classList.add('select')
-     } 
-    })
-      selectBtn[i].addEventListener('click',(e)=>{
-      const element = e.target
-      element.classList.toggle("select");
-      const inputValue = element.querySelector('input').value
-      const find = (el)=>el==inputValue
-      const duplicate = values.some(find)
-      console.log(duplicate,find)
-      if(duplicate){
-        console.log('find')
-        let index = values.indexOf(inputValue)
-        values.splice(index,1)
-      }else{
-
-        values.push(inputValue)
-      }
-      offDayInput.value = values
-    })
-  }
-
-</script>
+<script src="<%=baseUrl%>/js/offDaySelectModel.js"></script>
