--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,18 +1,7 @@
 </main>
 <script src="<%=baseUrl%>/dist/mc-calendar.min.js"></script>
 <script src="<%=baseUrl%>/js/timePicker.js"></script>
-<script>
-     const startDatePicker = MCDatepicker.create({
-        el: "#startPicker",
-        dateFormat: "DD-MM-YYYY",
-      });
-  const endDatePicker = MCDatepicker.create({
-        el: "#endPicker",
-        dateFormat: "DD-MM-YYYY",
-      });
-
-
-</script>
+<script src="<%=baseUrl%>/js/footer.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="<%=baseUrl%>/js/main.js"></script>
 
