--- a/views/partials/side-nav.ejs
+++ b/views/partials/side-nav.ejs
@@ -122,28 +122,4 @@
     </div>
   </div>
 </div>
-<script>
-  const optionsBtn = document.getElementById("options-btn");
-  const navList = document.querySelector(".nav-list");
-  const navListLi = navList.querySelectorAll("li");
-  const subOptions = document.querySelector(".sub-options");
-  const navLi = document.querySelectorAll(".nav-li");
-  optionsBtn.addEventListener('click',(e)=>{
-    e.preventDefault()
-  })
-  optionsBtn.addEventListener("mouseover", (e) => {
-    subOptions.classList.remove('hidden')
-  });
-  subOptions.addEventListener("mouseleave", () => {
-    subOptions.classList.add('hidden')
-  });
-  navList.querySelectorAll("li");
-  for (var i = 0; i < navListLi.length; i++) {
-    const element = navListLi[i];
-    if (element != optionsBtn) {
-      element.addEventListener("mouseover", () => {
-      subOptions.classList.add('hidden')
-      });
-    }
-  }
-</script>
+<script src="<%=baseUrl%>/js/sideNav.js"></script>
