--- a/views/partials/tolarence-set-modal.ejs
+++ b/views/partials/tolarence-set-modal.ejs
@@ -41,33 +41,4 @@
     </div>
   </div>
 </div>
-<script>
-  const selectBox = document.getElementsByClassName('select-box')
-  const toleAddBtn= document.querySelector('#toleAddBtn')
-  const currentToleValue= document.querySelector('#toleAddBtn').value
-  let toleValue ;
-  toleValue = currentToleValue
-  for(var i=0;i<selectBox.length;i++){
-    if(currentToleValue==selectBox[i].querySelector('input').value){
-      selectBox[i].classList.add('select')
-      currentElement = selectBox[i]
-    }
-  
-    selectBox[i].addEventListener('click',(e)=>{
-      const element = e.target
-      element.classList.add("select");
-
-      for(var i=0;i<selectBox.length;i++){
-        if(selectBox[i]!=element){
-          if(selectBox[i].classList.contains('select')){
-            selectBox[i].classList.remove('select')
-          }
-        }
-      }
-      const inputToleValue = element.querySelector('input').value
-      toleValue=inputToleValue
-      toleAddBtn.value = toleValue
-    })
-
-  }
-</script>
+<script src="<%=baseUrl%>/js/toleranceSetModal.js"></script>
