--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -476,5 +476,5 @@
 
 <script src="<%=baseUrl%>/js/dashboard.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
-<script src="<%=baseUrl%>/js/myChart.js"></script>
+<script src="<%=baseUrl%>/js/chart.js"></script>
 <%- include("../partials/footer"); -%>
