--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,6 @@
 </main>
 <script src="<%=baseUrl%>/dist/mc-calendar.min.js"></script>
+<script src="<%=baseUrl%>/vendors/js/mc-calendar.js"></script>
 <script src="<%=baseUrl%>/js/timePicker.js"></script>
 <script src="<%=baseUrl%>/js/footer.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
