update:  path name

--- a/views/partials/tolarence-set-modal.ejs
+++ b/views/partials/tolarence-set-modal.ejs
@@ -36,9 +36,11 @@
         <div class="select-box"><input type="hidden" value="00:30" />30m</div>
         <div class="select-box"><input type="hidden" value="00:45" />45m</div>
         <div class="select-box"><input type="hidden" value="00:60" />1h</div>
-        <div class="select-box"><input type="hidden" value="01:30" />1h 30m</div>
+        <div class="select-box">
+          <input type="hidden" value="01:30" />1h 30m
+        </div>
       </div>
     </div>
   </div>
 </div>
-<script src="<%=baseUrl%>/js/toleranceSetModal.js"></script>
+<script src="<%=baseUrl%>/js/tolerenceSetModal.js"></script>
