--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -112,10 +112,10 @@
         </span>
       </div>
       <input hidden name="socialImage" type="text" hidden>
-      <label for="name"
+      <label for="fingerId"
         >Finger ID
         <div class="">
-          <input value="<%= finger_id %>" id="name" name="fingerId" type="text" />
+          <input value="<%= finger_id %>" id="fingerId" name="fingerId" type="text" />
         </div>
       </label>
       <label for="name"
