--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -188,6 +188,35 @@
   .dash-card-box{
     grid-template-columns: repeat(1,1fr) ;
   }
+
+}
+
+.file-input__input {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
+.file-input__label {
+  margin-top: 5px;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  border-radius: 15px;
+  font-size: 12px;
+  font-weight: 500;
+  color: #fff;
+  padding: 15px;
+  background-color: #103047;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
+}
+
+.file-input__label svg {
+  height: 16px;
+  margin-right: 4px;
 }
 
 </style>
@@ -256,6 +285,40 @@
             <span .add-btn-text>Add</span>
           </button>
         </div>
+          <!-- Markup for  dat file upload -->
+  <form class="dat-file" action="<%= baseUrl %>/attendance-entry-or-exit" method="post">
+  
+    <div class="file-input">
+          <input
+            type="file"
+            name="file-input"
+            id="file-input"
+            class="file-input__input dat-file-input"
+            accept=".dat"  
+          />
+          <label class="file-input__label" for="file-input">
+            <svg
+              aria-hidden="true"
+              focusable="false"
+              data-prefix="fas"
+              data-icon="upload"
+              class="svg-inline--fa fa-upload fa-w-16"
+              role="img"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"
+            >
+              <path
+                fill="currentColor"
+                d="M296 384h-80c-13.3 0-24-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c12.6 12.6 3.7 34.1-14.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h136v8c0 30.9 25.1 56 56 56h80c30.9 0 56-25.1 56-56v-8h136c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
+              ></path>
+            </svg>
+            <span class="file-status">Upload file</span></label>
+        </div>
+        
+    </form>
+
+
+    
       </div>
    
       <table>
@@ -371,6 +434,8 @@
       </table>
     </div>
   </div>
+
+
 </div>
 
 <%- include("../partials/manual-attendance.ejs"); -%>
