update manual date modal

--- a/views/partials/manual-attendance.ejs
+++ b/views/partials/manual-attendance.ejs
@@ -29,7 +29,7 @@
                 type="date"
                 name="date"
                 class="manual-date"
-                oninput="manualDate(event);"
+                id="manualDate"
               />
               <p class="error date-error"></p>
             </div>
