--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,5 +12,6 @@
     <link rel="stylesheet" href="<%=baseUrl%>/dist/time-picker.css"/>
   </head>
   <body>
+    <div id="pageLoad"></div>
     <%- include("./nav.ejs"); -%>
     <main>
