manual attendance fixed

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -442,6 +442,7 @@
 <%- include("../partials/user-details-modal.ejs"); -%>
 
 
+<script src="<%=baseUrl%>/js/manualAttendance.js"></script>
 
 <script src="<%=baseUrl%>/js/dashboard.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
