--- a/views/partials/manual-attendance.ejs
+++ b/views/partials/manual-attendance.ejs
@@ -8,7 +8,7 @@
     </div>
     <div class="modal-content">
       <div class="container">
-        <form action="" method="post">
+        <form id="manualForm" action="" method="post">
           <label for="name">
             <div class="">
               <span class="isExist-attdance"></span>
@@ -92,4 +92,3 @@
     </div>
   </div>
 </div>
-<script src="<%=baseUrl%>/js/manualAttendance.js"></script>
