--- a/views/pages/holiday.ejs
+++ b/views/pages/holiday.ejs
@@ -6,7 +6,7 @@
 </style>
 <div id="project">
   <div class="text-head">
-    <div class="text-title">Holidays</div>
+    <div class="text-title"><a href="<%=baseUrl%>/options/holiday">Holidays</a></div>
     <% if(loggedInUser.userRole === 'admin'){ %>
     <div class="add-button">
       <button class="add-btn">
