--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -1,7 +1,7 @@
 <%- include("../partials/header"); -%>
 <div id="users">
   <div class="text-head">
-    <div class="text-title">Users</div>
+    <div class="text-title"><a href="<%=baseUrl%>/users">Users</a></div>
     <div class="add-button">
       <button class="add-btn">
         <span class="add-icon">
